@@ -1,0 +1,17 @@
+To enable the Message subsystem, simply enable the 'messages' module in your
+application configuration like this:
+
+
+		'modules' => array(
+				'messages' => array(
+					[...]
+					),
+				'user' => array(
+					[...]
+					)
+				);
+
+
+See the file messages/MessagesModule.php for possible configuration options.
+
+
